--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@pika/react": "^16.13.1",
     "@pika/react-dom": "^16.13.1",
     "prop-types": "^15.7.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
