--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "react:build": "npm run build",
+    "react:start": "npm run start"
   },
   "eslintConfig": {
     "extends": "react-app"
