--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "karrestad2",
-  "version": "0.1.0",
+  "version": "1.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.0.0-rc.5",
     "@chakra-ui/react": "^1.6.2",
     "@chakra-ui/theme": "^1.0.0-rc.5",
     "@chakra-ui/theme-tools": "^1.0.0-rc.5",
-    "@craco/craco": "^5.7.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -24,12 +23,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "react:build": "npm run build",
-    "react:start": "npm run start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
